--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/MichaelKazembe/cse-341-project1/issues"
   },
-  "homepage": "https://github.com/MichaelKazembe/cse-341-project1#readme"
+  "homepage": "https://github.com/MichaelKazembe/cse-341-project1#readme",
+  "dependencies": {
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  }
 }
